# cockpitdecks-desktop

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: desktop-macos-arm64.env
.github/workflows/: build-desktop-windows-x64.yml  release-desktop-macos-arm64.yml  release-macos-arm64.yml  release-windows-x64.yml
packaging/pyinstaller/: desktop.spec
scripts/: build_desktop.sh  refresh_macos_icon_cache.sh
src/cockpitdecks_desktop/: __init__.py  app.py  icon_loader.py
src/cockpitdecks_desktop/resources/: __init__.py
src/cockpitdecks_desktop/services/: __init__.py  deck_packs.py  desktop_settings.py  github_releases.py  live_apis.py  native_preview.py  process_runner.py
src/cockpitdecks_desktop/ui/: app_style.py  deck_packs_tab.py  devices_tab.py  diagnostics_tab.py  editor_tab.py  main_window.py  releases_tab.py  settings_dialog.py  sparkline.py  topology_tab.py
